--- a/TeoGarden/TeoGarden.CustomerWebsite/Views/Home/Index.cshtml
+++ b/TeoGarden/TeoGarden.CustomerWebsite/Views/Home/Index.cshtml
@@ -43,7 +43,7 @@
             <div class="cate-content container categories">
                 @foreach (var item in Model.Categories)
                 {
-                   <a href="#">
+                   <a asp-controller="products" asp-action="category" asp-route-Id="@item.Id">
                         <div class="cate-item">
                             <img class="item-img" src="~/img/categories/@item.Image" alt="">
                             <h5 class="item-name">@item.Name.ToString().ToUpper()</h5>
@@ -57,7 +57,25 @@
 <!-- End categories -->
 
 @* Guarranty *@
-
+<div class="wrapper guarantee">
+    <h3 class="sub-title text-center" style="color: var(--green)">Cam Kết</h2>
+    <h2 class="title text-center" style="color: #fff">CAM KẾT CỦA NHÀ TÈO</h2>
+    <h5 class="slogan" style="color: #fff">Nhà Tèo luôn mong muốn đem đến cho bạn những dịch vụ tốt nhất!</h5>
+    <div class="guarantee-content ms-3" style="color: #fff">
+        <div class="content-item">
+            <h4 class="guarantee-title">MIỄN PHÍ VẬN CHUYỂN</h4>
+            <p class="guarantee-des">Miễn phí giao hàng cho đơn hàng trên 500.000đ. Miễn phí giao hàng cho khách hàng thân thiết, miễn phí giao hàng nội ô Cần Thơ.</p>
+        </div>
+        <div class="content-item">
+            <h4 class="guarantee-title">THANH TOÁN DỄ DÀNG</h4>
+            <p class="guarantee-des">Thanh toán trực tiếp khi nhận hàng, thanh toán qua thẻ ngân hàng, ví điện tử.</p>
+        </div>
+        <div class="content-item">
+            <h4 class="guarantee-title">HỖ TRỢ ONLINE 24/7</h4>
+            <p class="guarantee-des">Khi có vấn đề cần trợ giúp, hãy gọi cho Tèo để được giúp đỡ. Số điện thoại 0123456789</p>
+        </div>
+    </div>
+</div>
 @* End guarranty *@
 
 @* Menu *@
@@ -69,7 +87,7 @@
             @foreach (var item in Model.Vegetables)
             {
                 <div class="cate-item">
-                    <a href="#"><img class="item-img" src="~/img/vegetables/@item.Image" alt=""></a>
+                    <a asp-controller="products" asp-action="detail" asp-route-Id="@item.Id"><img class="item-img" src="~/img/vegetables/@item.Image" alt=""></a>
                     <h3 class="item-name">@item.Name</h3>
                     <div class="star-vote mt-1">
                         @* <?php
@@ -94,7 +112,7 @@
                         <i class="fas fa-star" style="color: #FFCC33; margin-left:1px; margin-right:1px; font-size: 16px;"></i>
                     </div>
                     <div class="price-button">
-                        <p style="color: var(--green); font-weight: 700; font-size:22px; margin-bottom:0; line-height: 38px">@item.Price đ</p>
+                        <p style="color: var(--green); font-weight: 700; font-size:22px; margin-bottom:0; line-height: 38px">@String.Format(System.Globalization.CultureInfo.GetCultureInfo("vi-VN"),"{0:c}",@item.Price)</p>
                         <button onclick="#" class="btn btn-primary" style="font-size: 14px; font-weight: 700;">Thêm vào giỏ</button>
                     </div>
                 </div>
@@ -104,8 +122,8 @@
             <ul class="pagination mt-3">
                 <li class="page-item ps-1 pe-1"><a class="page-link" href="#"><i class="fas fa-angle-double-left"></i></a></li>
                 <li class="page-item ps-1 pe-1 active"><a class="page-link" href="#">1</a></li>
-                <li class="page-item ps-1 pe-1 active"><a class="page-link" href="#">2</a></li>
-                <li class="page-item ps-1 pe-1 active"><a class="page-link" href="#">3</a></li>
+                <li class="page-item ps-1 pe-1"><a class="page-link" href="#">2</a></li>
+                <li class="page-item ps-1 pe-1"><a class="page-link" href="#">3</a></li>
                 <li class="page-item ps-1 pe-1"><a class="page-link" href="#"><i class="fas fa-angle-double-right"></i></a></li>
             </ul>
         </nav>
