--- a/TeoGarden/TeoGarden.CustomerWebsite/Views/Shared/_Layout.cshtml
+++ b/TeoGarden/TeoGarden.CustomerWebsite/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
             <div class="container mt-1 mb-2">
                 <div class="row d-flex justify-content-center align-items-center">
                     <div id="header-logo" class="col-xl-3 col-md-4">
-                        <a asp-controller="Home"><img class="w-75" src="~/icon/logo.png" alt="Logo"></a>
+                        <a asp-controller="Home" asp-action="Index"><img class="w-75" src="~/icon/logo.png" alt="Logo"></a>
                     </div>
                     <div id="header-menu" class="col-xl-4 col-xs-0 col-md-0">
                         <nav class="nav nav-pills flex-column flex-sm-row">
