--- a/TeoGarden/TeoGarden.CustomerWebsite/Views/Home/Index.cshtml
+++ b/TeoGarden/TeoGarden.CustomerWebsite/Views/Home/Index.cshtml
@@ -11,28 +11,56 @@
 @* End banner *@
 
 @* Slider *@
-    @* <div class="container">
+    <div class="container">
         <div id="carouselExampleSlidesOnly" class="carousel slide z-1 mt-3 mb-3" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <?php foreach($data["sale"] as $i => $sale) : ?>
-                    <div class="carousel-item <?= $i==0 ? 'active' : ''?>">
-                        <div class="row">
-                            <div class="col-xl-6 col-md-6 col-xs-12 d-flex flex-column justify-content-center align-items-start slideshow mb-2">
-                                <h3 class="text-capitalize slide-title"><?= $sale["name"]?></h3>
-                                <h4 style="text-decoration:line-through; color: #666666"><?= number_format($sale["price"],0, ',','.') ?>đ</h4>
-                                <h4 class="slide-price"><?= number_format($sale["sale_price"],0, ',','.') ?>đ</h4>
-                                <p class="slide-content">Những người yêu thích thực phẩm sạch như bạn là người truyền cảm hứng cho Tèo làm việc mỗi ngày. Những ý kiến đóng góp của bạn sẽ giúp Tèo ngày càng hoàn thiện hơn và phục vụ bạn tốt hơn! </p>
-                                <button onclick="addToCart(<?= isset($_SESSION['user'])? $_SESSION['user']['id']: 0 ?> , <?= $sale['id']?>)" class="btn btn-primary font-weight-bold">Thêm vào giỏ<button>
-                            </div>
-                            <div class="col-xl-6 col-md-6 col-xs-12">
-                                <a href="<?= DOCUMENT_ROOT?>/products/detail/<?= $sale['id']?>"><img src="<?= URL_IMG ?>/vegetables/<?= $sale["image"]?>" class="img-fluid"alt="" srcset=""></a>
-                            </div>
+                <div class="carousel-item active">
+                    <div class="row">
+                        <div class="col-xl-6 col-md-6 col-xs-12 d-flex flex-column justify-content-center align-items-start slideshow mb-2">
+                            <h3 class="text-capitalize slide-title">Cà Chua</h3>
+                            <h4 style="text-decoration:line-through; color: #666666">12.000đ</h4>
+                            <h4 class="slide-price">10.000đ</h4>
+                            <p class="slide-content">Những người yêu thích thực phẩm sạch như bạn là người truyền cảm hứng cho Tèo làm việc mỗi ngày. Những ý kiến đóng góp của bạn sẽ giúp Tèo ngày càng hoàn thiện hơn và phục vụ bạn tốt hơn! </p>
+                            <button onclick="#" class="btn btn-primary font-weight-bold">Thêm vào giỏ<button>
+                        </div>
+                        <div class="col-xl-6 col-md-6 col-xs-12">
+                            <a href="#"><img src="~/img/vegetables/14.jpg" class="img-fluid"alt="" srcset=""></a>
                         </div>
                     </div>
-                <?php endforeach; ?>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-xl-6 col-md-6 col-xs-12 d-flex flex-column justify-content-center align-items-start slideshow mb-2">
+                            <h3 class="text-capitalize slide-title">Bí Xanh</h3>
+                            <h4 style="text-decoration:line-through; color: #666666">12.000đ</h4>
+                            <h4 class="slide-price">10.000đ</h4>
+                            <p class="slide-content">Những người yêu thích thực phẩm sạch như bạn là người truyền cảm hứng cho Tèo làm việc mỗi ngày. Những ý kiến đóng góp của bạn sẽ giúp Tèo ngày càng hoàn thiện hơn và phục vụ bạn tốt hơn! </p>
+                            <button onclick="#" class="btn btn-primary font-weight-bold">Thêm vào giỏ<button>
+                        </div>
+                        <div class="col-xl-6 col-md-6 col-xs-12">
+                            <a href="#"><img src="~/img/vegetables/7.jpg" class="img-fluid"alt="" srcset=""></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-xl-6 col-md-6 col-xs-12 d-flex flex-column justify-content-center align-items-start slideshow mb-2">
+                            <h3 class="text-capitalize slide-title">Cà Chua</h3>
+                            <h4 style="text-decoration:line-through; color: #666666">12.000đ</h4>
+                            <h4 class="slide-price">10.000đ</h4>
+                            <p class="slide-content">Những người yêu thích thực phẩm sạch như bạn là người truyền cảm hứng cho Tèo làm việc mỗi ngày. Những ý kiến đóng góp của bạn sẽ giúp Tèo ngày càng hoàn thiện hơn và phục vụ bạn tốt hơn! </p>
+                            <button onclick="#" class="btn btn-primary font-weight-bold">Thêm vào giỏ<button>
+                        </div>
+                        <div class="col-xl-6 col-md-6 col-xs-12">
+                            <a href="#"><img src="~/img/vegetables/25.jpg" class="img-fluid"alt="" srcset=""></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div> *@
+    </div>
 @* End slider *@
 
 <!-- Categories -->
