--- a/TeoGarden/TeoGarden.CustomerWebsite/Views/Home/Index.cshtml
+++ b/TeoGarden/TeoGarden.CustomerWebsite/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
                             <button onclick="#" class="btn btn-primary font-weight-bold">Thêm vào giỏ<button>
                         </div>
                         <div class="col-xl-6 col-md-6 col-xs-12">
-                            <a href="#"><img src="~/img/vegetables/14.jpg" class="img-fluid"alt="" srcset=""></a>
+                            <a href="#"><img src="~/icon/14.jpg" class="img-fluid"alt="" srcset=""></a>
                         </div>
                     </div>
                 </div>
@@ -32,14 +32,14 @@
                 <div class="carousel-item">
                     <div class="row">
                         <div class="col-xl-6 col-md-6 col-xs-12 d-flex flex-column justify-content-center align-items-start slideshow mb-2">
-                            <h3 class="text-capitalize slide-title">Bí Xanh</h3>
+                            <h3 class="text-capitalize slide-title">Cà Rốt</h3>
                             <h4 style="text-decoration:line-through; color: #666666">12.000đ</h4>
                             <h4 class="slide-price">10.000đ</h4>
                             <p class="slide-content">Những người yêu thích thực phẩm sạch như bạn là người truyền cảm hứng cho Tèo làm việc mỗi ngày. Những ý kiến đóng góp của bạn sẽ giúp Tèo ngày càng hoàn thiện hơn và phục vụ bạn tốt hơn! </p>
                             <button onclick="#" class="btn btn-primary font-weight-bold">Thêm vào giỏ<button>
                         </div>
                         <div class="col-xl-6 col-md-6 col-xs-12">
-                            <a href="#"><img src="~/img/vegetables/7.jpg" class="img-fluid"alt="" srcset=""></a>
+                            <a href="#"><img src="~/icon/16.jpg" class="img-fluid"alt="" srcset=""></a>
                         </div>
                     </div>
                 </div>
@@ -47,14 +47,14 @@
                 <div class="carousel-item">
                     <div class="row">
                         <div class="col-xl-6 col-md-6 col-xs-12 d-flex flex-column justify-content-center align-items-start slideshow mb-2">
-                            <h3 class="text-capitalize slide-title">Cà Chua</h3>
+                            <h3 class="text-capitalize slide-title">Xà Lách Tím</h3>
                             <h4 style="text-decoration:line-through; color: #666666">12.000đ</h4>
                             <h4 class="slide-price">10.000đ</h4>
                             <p class="slide-content">Những người yêu thích thực phẩm sạch như bạn là người truyền cảm hứng cho Tèo làm việc mỗi ngày. Những ý kiến đóng góp của bạn sẽ giúp Tèo ngày càng hoàn thiện hơn và phục vụ bạn tốt hơn! </p>
                             <button onclick="#" class="btn btn-primary font-weight-bold">Thêm vào giỏ<button>
                         </div>
                         <div class="col-xl-6 col-md-6 col-xs-12">
-                            <a href="#"><img src="~/img/vegetables/25.jpg" class="img-fluid"alt="" srcset=""></a>
+                            <a href="#"><img src="~/icon/25.jpg" class="img-fluid"alt="" srcset=""></a>
                         </div>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                 {
                    <a asp-controller="products" asp-action="category" asp-route-Id="@item.Id">
                         <div class="cate-item">
-                            <img class="item-img" src="~/img/categories/@item.Image" alt="">
+                            <img class="item-img" src="@item.Image" alt="">
                             <h5 class="item-name">@item.Name.ToString().ToUpper()</h5>
                             <p class="item-des">Các loại @item.Name.ToString().ToLower() tươi</p>
                         </div>
@@ -115,7 +115,7 @@
             @foreach (var item in Model.Vegetables)
             {
                 <div class="cate-item">
-                    <a asp-controller="products" asp-action="detail" asp-route-Id="@item.Id"><img class="item-img" src="~/img/vegetables/@item.Image" alt=""></a>
+                    <a asp-controller="products" asp-action="detail" asp-route-Id="@item.Id"><img class="item-img" src="@item.Image" alt=""></a>
                     <h3 class="item-name">@item.Name</h3>
                     <div class="star-vote mt-1">
                         @{
