--- a/TeoGarden/TeoGarden.CustomerWebsite/Views/Products/Index.cshtml
+++ b/TeoGarden/TeoGarden.CustomerWebsite/Views/Products/Index.cshtml
@@ -13,7 +13,7 @@
             @foreach (var item in Model.Vegetables)
             {
                 <div class="cate-item">
-                    <a asp-controller="products" asp-action="detail" asp-route-Id="@item.Id"><img class="item-img" src="~/img/vegetables/@item.Image" alt=""></a>
+                    <a asp-controller="products" asp-action="detail" asp-route-Id="@item.Id"><img class="item-img" src="@item.Image" alt=""></a>
                     <h3 class="item-name">@item.Name</h3>
                     <div class="star-vote mt-1">
                         @{
