--- a/TeoGarden/TeoGarden.CustomerWebsite/Views/Products/Search.cshtml
+++ b/TeoGarden/TeoGarden.CustomerWebsite/Views/Products/Search.cshtml
@@ -14,7 +14,7 @@
             @foreach (var item in Model.Vegetables)
             {
                 <div class="cate-item">
-                    <a asp-controller="products" asp-action="detail" asp-route-Id="@item.Id"><img class="item-img" src="~/img/vegetables/@item.Image" alt=""></a>
+                    <a asp-controller="products" asp-action="detail" asp-route-Id="@item.Id"><img class="item-img" src="@item.Image" alt=""></a>
                     <h3 class="item-name">@item.Name</h3>
                     <div class="star-vote mt-1">
                         @{
@@ -36,7 +36,7 @@
                         }
                     </div>
                     <div class="price-button">
-                        <p style="color: var(--green); font-weight: 700; font-size:22px; margin-bottom:0; line-height: 38px">@item.Price đ</p>
+                        <p style="color: var(--green); font-weight: 700; font-size:22px; margin-bottom:0; line-height: 38px">@String.Format(System.Globalization.CultureInfo.GetCultureInfo("vi-VN"),"{0:c}",@item.Price)</p>
                         <button onclick="#" class="btn btn-primary" style="font-size: 14px; font-weight: 700;">Thêm vào giỏ</button>
                     </div>
                 </div>
